corrigir problemas no authOptional
