# src/controllers/authController.ts
@@ -1,6 +1,6 @@
 import { Request, Response } from 'express';
-import { registerUser, loginUser } from '../services/authService';
-import { RegisterInput, LoginInput } from '../validations/authValidation';
+import { registerUser, loginUser, updateProfile } from '../services/authService';
+import { RegisterInput, LoginInput, UpdateProfileInput } from '../validations/authValidation';
 import asyncHandler from '../utils/asyncHandler';
 import AppError from '../utils/AppError';
 
@@ -21,4 +21,12 @@ const me = asyncHandler(async (req: Request, res: Response) => {
   res.json(req.user);
 });
 
-export { register, login, me };
+const updateMe = asyncHandler(async (req: Request<{}, {}, UpdateProfileInput>, res: Response) => {
+  if (!req.user) {
+    throw new AppError('Não autenticado', 401);
+  }
+  const user = await updateProfile(req.user._id.toString(), req.body);
+  res.json(user);
+});
+
+export { register, login, me, updateMe };
